--- a/ClientServerProject/ClientServerProject.csproj
+++ b/ClientServerProject/ClientServerProject.csproj
@@ -44,6 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmployeeOrders.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EmployeeOrders.Designer.cs">
+      <DependentUpon>EmployeeOrders.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -52,6 +58,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="EmployeeOrders.resx">
+      <DependentUpon>EmployeeOrders.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
