--- a/ClientServerProject/ClientServerProject.csproj
+++ b/ClientServerProject/ClientServerProject.csproj
@@ -48,61 +48,61 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DBconnect.cs" />
-    <Compile Include="EmployeeOrders.cs">
+    <Compile Include="EmployeeForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="EmployeeOrders.Designer.cs">
-      <DependentUpon>EmployeeOrders.cs</DependentUpon>
+    <Compile Include="EmployeeForm.Designer.cs">
+      <DependentUpon>EmployeeForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Food.cs">
+    <Compile Include="MenuRegisterForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Food.Designer.cs">
-      <DependentUpon>Food.cs</DependentUpon>
+    <Compile Include="MenuRegisterForm.Designer.cs">
+      <DependentUpon>MenuRegisterForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormEmployee.cs">
+    <Compile Include="EmployeeRegisterForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormEmployee.Designer.cs">
-      <DependentUpon>FormEmployee.cs</DependentUpon>
+    <Compile Include="EmployeeRegisterForm.Designer.cs">
+      <DependentUpon>EmployeeRegisterForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Manager.cs">
+    <Compile Include="ManagerForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Manager.Designer.cs">
-      <DependentUpon>Manager.cs</DependentUpon>
+    <Compile Include="ManagerForm.Designer.cs">
+      <DependentUpon>ManagerForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Order.cs">
+    <Compile Include="OrderForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Order.Designer.cs">
-      <DependentUpon>Order.cs</DependentUpon>
+    <Compile Include="OrderForm.Designer.cs">
+      <DependentUpon>OrderForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="EmployeeOrders.resx">
-      <DependentUpon>EmployeeOrders.cs</DependentUpon>
+    <EmbeddedResource Include="EmployeeForm.resx">
+      <DependentUpon>EmployeeForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Food.resx">
-      <DependentUpon>Food.cs</DependentUpon>
+    <EmbeddedResource Include="MenuRegisterForm.resx">
+      <DependentUpon>MenuRegisterForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormEmployee.resx">
-      <DependentUpon>FormEmployee.cs</DependentUpon>
+    <EmbeddedResource Include="EmployeeRegisterForm.resx">
+      <DependentUpon>EmployeeRegisterForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Manager.resx">
-      <DependentUpon>Manager.cs</DependentUpon>
+    <EmbeddedResource Include="ManagerForm.resx">
+      <DependentUpon>ManagerForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Order.resx">
-      <DependentUpon>Order.cs</DependentUpon>
+    <EmbeddedResource Include="OrderForm.resx">
+      <DependentUpon>OrderForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
